# stellarship

./: .gitignore  OPERATIONS.md  PLAN.md  README-HACKATHON.md  README.md  example-contracts.md  package-lock.json  package.json  quickstart.md  resources.md  stellar-wallets  task.md
.github/workflows/: zkbs-prover.yml
apps/relay/: .env.example  README.md  package.json
apps/relay/src/: server.js
apps/web/: .env.local.example  README.md  eslint.config.mjs  package.json  tailwind.config.js  tsconfig.tsbuildinfo
apps/web/public/: manifest.json  manifest.webmanifest  sw.js
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: Modals.tsx  (+10 more)
contracts/: Cargo.toml  README.md
contracts/zk-battleship/: Cargo.toml
contracts/zk-battleship/src/: lib.rs
proofs/zk-battleship-risc0/: Cargo.toml  README.md  example-input.json
proofs/zk-battleship-risc0/.cargo/: config.toml
proofs/zk-battleship-risc0/host/: Cargo.toml
proofs/zk-battleship-risc0/host/src/: main.rs
proofs/zk-battleship-risc0/methods/: Cargo.toml  build.rs
proofs/zk-battleship-risc0/shared/: Cargo.toml
scripts/: configure-zkbs-risc0-testnet.sh  set-zkbs-verifier-testnet.sh  simulate-terminal-match.sh  start-game-dual-auth.mjs
stellarship/: .gitignore
stellarship/hidden-warrior-contract/: Anchor.toml  README.md  rust-toolchain.toml
stellarship/hidden-warrior-contract/migrations/: deploy.ts
stellarship/hidden-warrior-contract/tests/: hidden-warrior.ts
stellarship/hidden-warrior-web/: README.md  package.json
stellarship/hidden-warrior-web/prisma/: seed_enemies.ts
(+165 files in other folders)
