[package]
name = "zkbs-prover"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

risc0-zkvm = { version = "3.0.3", features = ["prove"] }
zkbs-methods = { path = "../methods" }
zkbs-shared = { path = "../shared" }

